components/perses-ui/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: perses
  annotations:
    argocd.argoproj.io/sync-options: Delete=false
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
