components/perses-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perses-ui
  labels:
    app.kubernetes.io/name: perses-ui
spec:
  selector:
    app.kubernetes.io/name: perses-ui
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
