components/perses-ui/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: perses-ui
  labels:
    app.kubernetes.io/name: perses-ui
spec:
  to:
    kind: Service
    name: perses-ui
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
